--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,12 @@
 DB_HOST= #SBDG host and database name
 DB_USER="myDev" ##SBDG user name
 DB_PASSWORD="abc12354" ##SBDG password
+
+#_Path of site
+URL="my-website.com"
+
+#_Database_tables_names
+USERS="nameOfTableUsers"
+GAMES="nameOfTableGames"
+THEMES="nameOfTableThemes"
+ROOMS="nameOfTableRooms"
